force-app/main/default/objects/PH_Alert_Event__c/PH_Alert_Event__c.object-meta.xml
<CustomObject>
    <label>Alert Event</label>
    <pluralLabel>Alert Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>