force-app/main/default/objects/PH_Alert_Event__c/fields/Alert_Rule__c.field-meta.xml
<CustomField>
    <fullName>Alert_Rule__c</fullName>
    <label>Alert Rule</label>
    <type>Lookup</type>
    <referenceTo>PH_Alert_Rule__c</referenceTo>
    <relationshipLabel>Alert Events</relationshipLabel>
    <relationshipName>Alert_Events</relationshipName>
    <required>true</required>
</CustomField>