force-app/main/default/objects/PH_Alert_Event__c/fields/Fired_At__c.field-meta.xml
<CustomField>
    <fullName>Fired_At__c</fullName>
    <label>Fired At</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>