force-app/main/default/objects/PH_Alert_Event__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Reference</label>
    <type>Text</type>
    <length>255</length>
</CustomField>