force-app/main/default/objects/PH_Alert_Event__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>INFO</fullName><default>true</default><label>INFO</label></value>
            <value><fullName>WARN</fullName><default>false</default><label>WARN</label></value>
            <value><fullName>HIGH</fullName><default>false</default><label>HIGH</label></value>
        </valueSetDefinition>
    </valueSet>
    <required>true</required>
</CustomField>